# deployment-conv-rag

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy-llm.yml  deploy-ocr.yml  pre-commit.yml
docker/: Dockerfile.deepseek-ocr-vllm  Dockerfile.dots-ocr-vllm  Dockerfile.rag-llm  entrypoint.deepseek-ocr.sh
infra_documentation/: ec2_setup.md
