[project]
name = "deployment-conv-rag"
version = "0.1.0"
description = "The repo for llm deployment for conv-rag"
authors = [
    {name = "HermesNdjeng",email = "yanndjeng@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"
ruff = "^0.14.6"
pyright = "^1.1.407"

